--- a/public/css/app.css
+++ b/public/css/app.css
@@ -437,6 +437,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-4{
   margin-bottom: 1rem;
 }
+.mt-3{
+  margin-top: 0.75rem;
+}
+.-mb-3{
+  margin-bottom: -0.75rem;
+}
 .mt-7{
   margin-top: 1.75rem;
 }
@@ -463,6 +469,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ml-1{
   margin-left: 0.25rem;
+}
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+.mb-0{
+  margin-bottom: 0px;
+}
+.mb-0\.5{
+  margin-bottom: 0.125rem;
 }
 .block{
   display: block;
@@ -510,11 +525,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-h-0{
   max-height: 0px;
-}
-.max-h-max{
-  max-height: -webkit-max-content;
-  max-height: -moz-max-content;
-  max-height: max-content;
 }
 .w-11\/12{
   width: 91.666667%;
@@ -655,6 +665,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
+.border-bali-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(123 86 29 / var(--tw-border-opacity));
+}
 .border-bali-400{
   --tw-border-opacity: 1;
   border-color: rgb(182 126 43 / var(--tw-border-opacity));
@@ -683,6 +697,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.bg-bali-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 239 226 / var(--tw-bg-opacity));
+}
 .bg-bali-600{
   --tw-bg-opacity: 1;
   background-color: rgb(99 69 23 / var(--tw-bg-opacity));
@@ -694,10 +712,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-bali-200{
   --tw-bg-opacity: 1;
   background-color: rgb(228 192 139 / var(--tw-bg-opacity));
-}
-.bg-bali-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 239 226 / var(--tw-bg-opacity));
 }
 .bg-gray-50{
   --tw-bg-opacity: 1;
@@ -724,6 +738,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .object-top{
   -o-object-position: top;
      object-position: top;
+}
+.p-5{
+  padding: 1.25rem;
 }
 .p-6{
   padding: 1.5rem;
@@ -865,6 +882,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-bali-700{
   --tw-text-opacity: 1;
   color: rgb(74 52 18 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 .text-bali-50{
   --tw-text-opacity: 1;
