--- a/public/css/app.css
+++ b/public/css/app.css
@@ -394,6 +394,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .col-span-2{
   grid-column: span 2 / span 2;
 }
+.col-span-11{
+  grid-column: span 11 / span 11;
+}
+.col-span-4{
+  grid-column: span 4 / span 4;
+}
 .m-0{
   margin: 0px;
 }
@@ -461,8 +467,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-4{
   margin-left: 1rem;
 }
+.ml-5{
+  margin-left: 1.25rem;
+}
 .ml-3{
   margin-left: 0.75rem;
+}
+.ml-6{
+  margin-left: 1.5rem;
 }
 .ml-10{
   margin-left: 2.5rem;
@@ -472,6 +484,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ml-1{
   margin-left: 0.25rem;
+}
+.mt-0{
+  margin-top: 0px;
+}
+.mt-10{
+  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -508,6 +526,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-28{
   height: 7rem;
 }
+.h-10{
+  height: 2.5rem;
+}
 .h-14{
   height: 3.5rem;
 }
@@ -530,9 +551,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-}
-.w-9\/12{
-  width: 75%;
 }
 .w-4{
   width: 1rem;
@@ -686,6 +704,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(204 251 241 / var(--tw-bg-opacity));
 }
+.bg-lime-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 249 157 / var(--tw-bg-opacity));
+}
+.bg-teal-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 246 228 / var(--tw-bg-opacity));
+}
 .bg-bali-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 224 197 / var(--tw-bg-opacity));
@@ -790,6 +816,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pl-4{
   padding-left: 1rem;
+}
+.pt-10{
+  padding-top: 2.5rem;
+}
+.pb-1{
+  padding-bottom: 0.25rem;
 }
 .pt-20{
   padding-top: 5rem;
@@ -938,15 +970,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
-.transition-all{
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .transition{
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-all{
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -955,11 +987,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-700{
-  transition-duration: 700ms;
-}
 .duration-75{
   transition-duration: 75ms;
+}
+.duration-700{
+  transition-duration: 700ms;
 }
 .duration-200{
   transition-duration: 200ms;
@@ -984,6 +1016,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:bg-orange-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
+}
+.hover\:bg-lime-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 249 157 / var(--tw-bg-opacity));
+}
+.hover\:bg-teal-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 246 228 / var(--tw-bg-opacity));
 }
 .hover\:bg-bali-500:hover{
   --tw-bg-opacity: 1;
@@ -1083,6 +1127,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:hidden{
     display: none;
   }
+  .md\:w-10\/12{
+    width: 83.333333%;
+  }
   .md\:w-9\/12{
     width: 75%;
   }
@@ -1091,6 +1138,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .md\:w-48{
     width: 12rem;
+  }
+  .md\:w-11\/12{
+    width: 91.666667%;
   }
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1142,8 +1192,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
   }
+  .lg\:col-span-1{
+    grid-column: span 1 / span 1;
+  }
+  .lg\:col-span-5{
+    grid-column: span 5 / span 5;
+  }
   .lg\:-mt-3{
     margin-top: -0.75rem;
+  }
+  .lg\:ml-4{
+    margin-left: 1rem;
+  }
+  .lg\:mt-0{
+    margin-top: 0px;
   }
   .lg\:flex{
     display: flex;
@@ -1153,6 +1215,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .lg\:w-10\/12{
     width: 83.333333%;
+  }
+  .lg\:w-9\/12{
+    width: 75%;
   }
   .lg\:grid-cols-12{
     grid-template-columns: repeat(12, minmax(0, 1fr));
@@ -1165,6 +1230,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .lg\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+  .lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
 @media (min-width: 1280px){
