--- a/public/css/app.css
+++ b/public/css/app.css
@@ -369,18 +369,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .relative{
   position: relative;
 }
-.inset-x-0{
-  left: 0px;
-  right: 0px;
-}
 .right-0{
   right: 0px;
 }
 .z-0{
   z-index: 0;
-}
-.z-10{
-  z-index: 10;
 }
 .z-50{
   z-index: 50;
@@ -455,6 +448,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-3{
   margin-bottom: 0.75rem;
 }
+.ml-1{
+  margin-left: 0.25rem;
+}
 .mt-8{
   margin-top: 2rem;
 }
@@ -463,6 +459,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-10{
   margin-top: 2.5rem;
+}
+.ml-2{
+  margin-left: 0.5rem;
 }
 .ml-5{
   margin-left: 1.25rem;
@@ -473,14 +472,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-6{
   margin-left: 1.5rem;
 }
-.ml-10{
-  margin-left: 2.5rem;
-}
 .mt-1{
   margin-top: 0.25rem;
 }
-.ml-1{
-  margin-left: 0.25rem;
+.-ml-px{
+  margin-left: -1px;
 }
 .block{
   display: block;
@@ -490,6 +486,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .flex{
   display: flex;
+}
+.inline-flex{
+  display: inline-flex;
 }
 .grid{
   display: grid;
@@ -529,6 +528,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-4{
   height: 1rem;
 }
+.h-5{
+  height: 1.25rem;
+}
 .max-h-0{
   max-height: 0px;
 }
@@ -552,14 +554,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-6{
   width: 1.5rem;
 }
+.w-10\/12{
+  width: 83.333333%;
+}
 .w-28{
   width: 7rem;
 }
-.min-w-0{
-  min-width: 0px;
+.w-5{
+  width: 1.25rem;
 }
-.flex-auto{
-  flex: 1 1 auto;
+.flex-1{
+  flex: 1 1 0%;
 }
 .flex-grow{
   flex-grow: 1;
@@ -588,6 +593,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.cursor-default{
+  cursor: default;
+}
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -600,9 +608,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .grid-cols-11{
   grid-template-columns: repeat(11, minmax(0, 1fr));
 }
-.grid-cols-5{
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
 .flex-row{
   flex-direction: row;
 }
@@ -612,14 +617,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .items-center{
   align-items: center;
 }
-.items-stretch{
-  align-items: stretch;
-}
-.justify-center{
-  justify-content: center;
-}
 .justify-between{
   justify-content: space-between;
+}
+.justify-items-center{
+  justify-items: center;
 }
 .gap-7{
   gap: 1.75rem;
@@ -646,9 +648,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .overflow-hidden{
   overflow: hidden;
 }
-.whitespace-nowrap{
-  white-space: nowrap;
-}
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -657,6 +656,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rounded{
   border-radius: 0.25rem;
+}
+.rounded-t-md{
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+.rounded-l-md{
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-r-md{
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
 }
 .border-2{
   border-width: 2px;
@@ -715,17 +726,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.bg-bali-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(123 86 29 / var(--tw-bg-opacity));
+}
 .bg-bali-200{
   --tw-bg-opacity: 1;
   background-color: rgb(228 192 139 / var(--tw-bg-opacity));
 }
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-transparent{
   background-color: transparent;
@@ -783,6 +798,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
 }
+.py-2\.5{
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -806,17 +825,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-1{
   padding-bottom: 0.25rem;
 }
-.pt-20{
-  padding-top: 5rem;
-}
 .pb-4{
   padding-bottom: 1rem;
 }
 .text-left{
   text-align: left;
-}
-.text-center{
-  text-align: center;
 }
 .text-justify{
   text-align: justify;
@@ -845,6 +858,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-bold{
   font-weight: 700;
 }
@@ -857,11 +874,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-extrabold{
   font-weight: 800;
 }
-.font-normal{
-  font-weight: 400;
+.uppercase{
+  text-transform: uppercase;
 }
 .italic{
   font-style: italic;
+}
+.leading-tight{
+  line-height: 1.25;
+}
+.leading-5{
+  line-height: 1.25rem;
 }
 .text-bali-400{
   --tw-text-opacity: 1;
@@ -911,13 +934,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
+.text-bali-600{
+  --tw-text-opacity: 1;
+  color: rgb(99 69 23 / var(--tw-text-opacity));
+}
 .text-bali-300{
   --tw-text-opacity: 1;
   color: rgb(214 161 82 / var(--tw-text-opacity));
+}
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .opacity-0{
   opacity: 0;
@@ -950,6 +985,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.ring-gray-300{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -972,6 +1011,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .duration-75{
   transition-duration: 75ms;
+}
+.duration-150{
+  transition-duration: 150ms;
 }
 .duration-700{
   transition-duration: 700ms;
@@ -1020,6 +1062,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(214 161 82 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
 .hover\:bg-red-500:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -1027,39 +1073,57 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:font-semibold:hover{
   font-weight: 600;
 }
-.hover\:font-bold:hover{
-  font-weight: 700;
+.hover\:text-bali-50:hover{
+  --tw-text-opacity: 1;
+  color: rgb(248 239 226 / var(--tw-text-opacity));
 }
 .hover\:text-bali-500:hover{
   --tw-text-opacity: 1;
   color: rgb(123 86 29 / var(--tw-text-opacity));
 }
-.hover\:text-bali-600:hover{
+.hover\:text-bali-300:hover{
   --tw-text-opacity: 1;
-  color: rgb(99 69 23 / var(--tw-text-opacity));
+  color: rgb(214 161 82 / var(--tw-text-opacity));
 }
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.hover\:text-bali-300:hover{
+.hover\:text-gray-500:hover{
   --tw-text-opacity: 1;
-  color: rgb(214 161 82 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.hover\:text-gray-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
-.focus\:border-2:focus{
-  border-width: 2px;
+.hover\:shadow-lg:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.focus\:border-bali-500:focus{
+.focus\:z-10:focus{
+  z-index: 10;
+}
+.focus\:border-blue-600:focus{
   --tw-border-opacity: 1;
-  border-color: rgb(123 86 29 / var(--tw-border-opacity));
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+.focus\:border-blue-300:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 .focus\:bg-white:focus{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.focus\:bg-blue-700:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 .focus\:bg-red-500:focus{
   --tw-bg-opacity: 1;
@@ -1073,9 +1137,62 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.focus\:shadow-lg:focus{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+.focus\:ring-0:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:ring:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.active\:bg-blue-800:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
+.active\:bg-gray-100:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.active\:text-gray-700:active{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.active\:text-gray-500:active{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.active\:shadow-lg:active{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+@media (min-width: 640px){
+  .sm\:flex{
+    display: flex;
+  }
+  .sm\:hidden{
+    display: none;
+  }
+  .sm\:flex-1{
+    flex: 1 1 0%;
+  }
+  .sm\:items-center{
+    align-items: center;
+  }
+  .sm\:justify-between{
+    justify-content: space-between;
+  }
 }
 @media (min-width: 768px){
   .md\:col-span-2{
@@ -1113,9 +1230,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .md\:hidden{
     display: none;
-  }
-  .md\:w-9\/12{
-    width: 75%;
   }
   .md\:w-auto{
     width: auto;
@@ -1208,11 +1322,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .lg\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-}
-@media (min-width: 1280px){
-  .xl\:w-96{
-    width: 24rem;
   }
 }
 @media (min-width: 1440px){
